 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 3
============

* [DanielPharos]: Grayed out beziers can now not be selected in views anymore.

* [DanielPharos]: Removed Quake 3's Call of Duty addon. People should switch to CoD gamemode.

* [DanielPharos]: Add colorboxes in treeview for Model Editor bones to display start_color and end_color.

6.6.0 Beta 2
============

* [cdunde/DanielPharos]: Full support for .md5mesh multiple meshes, component (mesh) skins
          - and their shader display including editing abilities for both shaders and skins.

* [cdunde]: Revamp of bones Linear handle creation to increase drawing speed and easer color recognition.

* [cdunde/DanielPharos]: Full support for .md5mesh bone importing with weight assignment and various
          - methods of bone rotation for QuArK Default, single set and multi sets of bones.
          - Various menu functions for bone handle scaling and reset for selected bones and all bones.

* [DanielPharos]: Model Editor - Now bones can be moved around in the treeview even though other items
          - are also selected.

* [DanielPharos]: Fixed AutoSave-setting not being applied.

* [cdunde]: Model Editor - Fixed model importers to display proper skin once a model is imported.

* [cdunde]: Model Editor - Fixed face mode not drawing selection outlines while rotating.

* [cdunde/DanielPharos]: Added setup file for Doom3 Quake4 .md5mesh (and .md5anim but not yet) model importing.

* [cdunde]: Setup new Component Colors and draw Textured View Tint Colors system.

* [cdunde/DanielPharos]: DEV. NOTE: Bones system moved to outside of components for Model Editor completed.