@@ -15,6 +15,9 @@ $Id$
 6.6.0 Beta 3
 ============
 
+* [DanielPharos]: Read in two additional MOHAA surface flags. MOHAA .map file loading is still not
+          - working properly though.
+
 * [DanielPharos]: Grayed out beziers can now not be selected in views anymore.
 
 * [DanielPharos]: Removed Quake 3's Call of Duty addon. People should switch to CoD gamemode.
